--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.6.11",
+    "@nextui-org/theme": "^2.4.5",
     "axios": "^1.9.0",
     "crypto-js": "^4.2.0",
     "js-cookie": "^3.0.5",
