--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "http": "^0.0.1-security",
+    "morgan": "^1.10.0",
+    "mysql2": "^3.14.0",
+    "ws": "^8.18.1"
   }
 }
