--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "express": "^5.1.0",
     "http": "^0.0.1-security",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0",
     "ws": "^8.18.1"
   }
