--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,46 +10,44 @@
     "preview": "vite preview"
   },
   "dependencies": {
-<<<<<<< HEAD
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@headlessui/react": "^2.2.2",
-    "@heroicons/react": "^2.2.0",
+    "@heroui/react": "^2.7.4",
+    "@heroui/system": "^2.4.11",
+    "@heroui/theme": "^2.4.11",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
-    "antd": "^5.24.8",
+    "@nextui-org/react": "^2.6.11",
+    "@nextui-org/theme": "^2.4.5",
+    "antd": "^5.24.9",
     "axios": "^1.9.0",
     "crypto-js": "^4.2.0",
     "framer-motion": "^12.9.2",
-=======
-    "@nextui-org/react": "^2.6.11",
-    "@nextui-org/theme": "^2.4.5",
-    "axios": "^1.9.0",
-    "crypto-js": "^4.2.0",
     "html5-qrcode": "^2.3.8",
->>>>>>> 4279d73adda670bc715a4a497c3118fdb710e9af
+    "install": "^0.13.0",
     "js-cookie": "^3.0.5",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "jsqr": "^1.4.0",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.5.2",
-    "react-webcam": "^7.2.0"
+    "react-webcam": "^7.2.0",
+    "postcss": "^8.4.49",
+    "autoprefixer": "^10.4.20"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.21",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.4",
-    "vite": "^6.3.1"
+    "vite": "^6.3.1",
+    "tailwindcss": "^3.4.17"
   }
 }
