--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,10 @@
     "@nextui-org/react": "^2.6.11",
     "@nextui-org/theme": "^2.4.5",
     "antd": "^5.24.9",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.9.0",
     "crypto-js": "^4.2.0",
+    "dayjs": "^1.11.13",
     "framer-motion": "^12.9.2",
     "html5-qrcode": "^2.3.8",
     "install": "^0.13.0",
@@ -29,14 +31,13 @@
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "jsqr": "^1.4.0",
+    "postcss": "^8.4.49",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.5.2",
-    "react-webcam": "^7.2.0",
-    "postcss": "^8.4.49",
-    "autoprefixer": "^10.4.20"
+    "react-webcam": "^7.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
@@ -47,7 +48,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
-    "vite": "^6.3.1",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "vite": "^6.3.1"
   }
 }
