--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,12 +25,14 @@
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.9.2",
+    "html2canvas": "^1.4.1",
     "html5-qrcode": "^2.3.8",
     "install": "^0.13.0",
     "js-cookie": "^3.0.5",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "jsqr": "^1.4.0",
+    "jwt-decode": "^4.0.0",
     "postcss": "^8.4.49",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
