--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "jspdf-autotable": "^5.0.2",
     "jsqr": "^1.4.0",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "postcss": "^8.4.49",
     "qrcode.react": "^4.2.0",
