--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
+    "number-to-words": "^1.2.4",
     "postcss": "^8.4.49",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
