--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
     "@mui/material": "^7.0.2",
     "@nextui-org/react": "^2.6.11",
     "@nextui-org/theme": "^2.4.5",
-    "antd": "^5.24.9",
+    "antd": "^5.26.1",
     "autoprefixer": "^10.4.20",
     "axios": "^1.9.0",
     "crypto-js": "^4.2.0",
@@ -42,7 +42,8 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.5.2",
-    "react-webcam": "^7.2.0"
+    "react-webcam": "^7.2.0",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
