--- a/mongo_backend/package.json
+++ b/mongo_backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "mongo_backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -17,9 +17,9 @@
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.16.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
-    "mysql2": "^3.14.0",
     "ws": "^8.18.1"
   }
 }
