--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.5.2",
+    "react-select": "^5.10.1",
     "react-webcam": "^7.2.0",
     "recharts": "^2.15.3"
   },
