--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^7.0.2",
     "@nextui-org/react": "^2.6.11",
     "@nextui-org/theme": "^2.4.5",
+    "@zxing/library": "^0.21.3",
     "antd": "^5.26.1",
     "autoprefixer": "^10.4.20",
     "axios": "^1.9.0",
